<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pri.android.hackdata.activity.MainActivity">

    <ImageView

        android:scaleType="centerCrop"
        android:src="@drawable/bg_tophdpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:id="@+id/learn"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/learn"
            android:layout_weight="1.5"
            android:padding="16dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/learn_things"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="4.5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:id="@+id/practice"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/practice"
            android:layout_weight="1.5"
            android:paddingLeft="16dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/practice"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="4.5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/green"
        android:orientation="horizontal"
        android:id="@+id/challenges"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/weekly_calender"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/challenges"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="4.5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            >

        </TextView>

    </LinearLayout>

</LinearLayout>
